--- a/css/theme.css
+++ b/css/theme.css
@@ -4293,8 +4293,25 @@ section{
 	padding:50px !important;
 }
 
+.section-quote{
+	padding:24px !important;
+	background-color:#333 !important;
+	color:#fff !important;
+	margin:0 !important;
+	border: 0 !important;
+	font-size: 1.9rem !important;
+}
+
+.testimonial.testimonial-style-5 blockquote p,.testimonial .testimonial-author strong,.testimonial.testimonial-with-quotes blockquote:before,.testimonial.testimonial-with-quotes blockquote:after{
+	color:#fff !important;
+}
+
+.testimonial.testimonial-style-5 .testimonial-author{
+	border:none !important;
+}
+
 .section-default{
-	padding:100px 0% !important;
+	padding:150px 0% !important;
 	min-height: 500px !important;
 	background-color: #fff !important;
 }
@@ -4312,7 +4329,11 @@ section{
 }
 
 .snapshot{
-	color:#fff !important;
+	color:#000 !important;
+	font-size:1.8rem;
+	background-color: #fff;
+	padding: 1%;
+	border-radius: 3px;
 }
 .med-text{
 	font-size:2.5rem;
@@ -4342,4 +4363,8 @@ section{
 
 ul{
 	list-style-position: inside;
+}
+
+.feature-box .feature-box-info {
+    padding-left: 0px !important;
 }
