--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,21 @@
+
+
+.alert-message{
+	height:50px;
+	position: absolute;
+	z-index: 3000;
+	background: purple;
+	width:100%;
+	margin:0;
+	padding:0;
+}
+
+.alert-message p{
+	color:white !important;
+	line-height: 50px  !important;
+	font-size: 1.5rem !important;
+	}
+
 body, p{
 	color:#000 ;
 	line-height: 3.5rem !important;
